--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,35 @@
 
-
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
+  display: flex;
+  align-items: center;
 }
 
-.header {
-  background-color: #333;
-  color: white;
-  padding: 20px 0;
-  text-align: center;
+
+.logo {
+  height: 40px; /* Ajuste a altura do logo */
+  margin-right: 20px; /* Espaço à direita do logo */
+  margin-left: 10px;
 }
 
-.main-content {
-  padding: 20px 0;
+.navbar-right {
+  display: flex;
+  gap: 10px; /* Espaço entre os itens */
 }
 
-.footer {
-  background-color: #333;
-  color: white;
-  padding: 20px 0;
-  text-align: center;
+.navbar {
+  background-color: #333; /* Cor de fundo da navbar */
+  color: white; /* Cor do texto da navbar */
+  padding: 1rem 0; /* Espaçamento interno da navbar */
+  position: fixed; /* Fixar a navbar no topo da tela */
+  top: 0;
+  left: 0;
+  width: 100%; /* Ocupar toda a largura da tela */
+  display: flex; /* Flexionar a navbar para alinhar os itens */
+  justify-content: space-between ; /* Distribuir os itens entre as extremidades */
+  align-items: center; /* Alinhar os itens verticalmente no centro */
+}
+
+h1, h2{
+  display: flex;
+  align-items: center;
 }
