--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,8 +1,11 @@
-
 .footer {
-    background-color: #2d3748;
-    color: white;
-    padding: 1rem;
-    text-align: center;
-  }
-  
+  background-color: #2d3748;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  justify-content: center;
+}
